# mp3ShazamAutoTag

./: .gitignore  LICENSE  Readme.md  main.py  mp3ShazamAutoTag.sublime-project  pyproject.toml  requirements.txt  setup.py
auto_tag/: audio_recognize.py  gui.py  mp3_recognize.py  utils.py
tests/: test_recognize.py
